properly wrapped scss variable so it compiles correctly

--- a/Elemental.Theme/Styles/spinner/_spinner.scss
+++ b/Elemental.Theme/Styles/spinner/_spinner.scss
@@ -325,8 +325,8 @@
 
     .spinner-item {
       position: absolute;
-      top: calc(50% - $size / 2);
-      left: calc(50% - $size / 2);
+      top: calc(50% - #{$size} / 2);
+      left: calc(50% - #{$size} / 2);
       width: $size;
       height: $size;
       border-radius: 50%;
